--- a/.github/workflows/get_msg.yml
+++ b/.github/workflows/get_msg.yml
@@ -9,5 +9,7 @@ on:
 jobs:
   get-msg:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       - name: Set commit message to an environment variable
         run: echo ::set-env name=commit_msg::$(git log --format=%B -n 1 ${{ github.event.pull_request.head.sha  }})
