--- a/.github/workflows/get_msg.yml
+++ b/.github/workflows/get_msg.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Set commit message to an environment variable
         run: |
           echo ::set-env name=commit_msg::$(git log --format=%B -n 1 ${{ github.event.pull_request.head.sha  }})
-          echo ${commit_msg}
+          echo commit message is ${commit_msg}
