--- a/.github/workflows/get_msg.yml
+++ b/.github/workflows/get_msg.yml
@@ -15,4 +15,6 @@ jobs:
       - name: Set commit message to an environment variable
         run: |
           # echo ::set-env name=commit_msg::$(git log --format=%B -n 1 ${{ github.event.pull_request.head.sha  }})
-          echo "commit message is ${{ github.event.head_commit.message }}"
+          # echo "commit message is ${{ github.event.head_commit.message }}"
+          echo ::set-env name=commitmsg::$(git log --format=%B -n 1 ${{ github.event.after }})
+          echo $commitmsg
