--- a/.github/workflows/get_msg.yml
+++ b/.github/workflows/get_msg.yml
@@ -17,5 +17,5 @@ jobs:
           # echo ::set-env name=commit_msg::$(git log --format=%B -n 1 ${{ github.event.pull_request.head.sha  }})
           # echo "commit message is ${{ github.event.head_commit.message }}"
           # echo ::set-env name=commitmsg::$(git log --format=%B -n 1 ${{ github.event.after }})
-          echo "::set-output name=message::$(git log --no-merges -1 --oneline)"
+          echo "::set-env name=message::$(git log --no-merges -1 --oneline)"
           echo $message
