--- a/.github/workflows/get_msg.yml
+++ b/.github/workflows/get_msg.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set commit message to an environment variable
         run: |
-          echo '::set-env name=message:: ${{ github.event.head_commit.message }}'
+          echo '::set-env name=message::$(git log --format=%B -n 1)'
           echo $message
