--- a/.github/workflows/get_msg.yml
+++ b/.github/workflows/get_msg.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
       - name: Set commit message to an environment variable
         run: |
           echo '::set-env name=message::$(git log --format=%B -n 1)'
