change the trigger

--- a/.github/workflows/show_report_in_comment.yml
+++ b/.github/workflows/show_report_in_comment.yml
@@ -5,6 +5,7 @@ on:
     types: [opened, synchronize]
     paths:
       - 'show_message_in_comment/**'
+      - '.github/workflows/show_report_in_comment.yml'
 
 
 jobs:
