--- a/.github/workflows/show_report_in_comment.yml
+++ b/.github/workflows/show_report_in_comment.yml
@@ -15,7 +15,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Get commit message
         run: git log --format=%B -n 1
+
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
