Fix the unit test and workflow

--- a/.github/workflows/show_report_in_comment.yml
+++ b/.github/workflows/show_report_in_comment.yml
@@ -24,7 +24,7 @@ jobs:
           fetch-depth: 2
 
       - name: Get commit message
-        run: git log --format=%B -n 1
+        run: git log --format=%B -n 1 --skip 1
 
       - uses: actions/setup-python@v2
         with:
