--- a/.github/workflows/show_report_in_comment.yml
+++ b/.github/workflows/show_report_in_comment.yml
@@ -17,14 +17,27 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Get commit message
-        run: git log --format=%B -n 1
+        run: |
+          git log --format=%B -n 1
+          git log -n 4
 
       - uses: actions/checkout@v2
         with:
           fetch-depth: 2
 
       - name: Get commit message
-        run: git log --format=%B -n 1 --skip 1
+        run: |
+          git log --format=%B -n 1 --skip 1
+          git log -n 4
+
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Get commit message
+        run: |
+          git log --format=%B -n 1 --skip 1
+          git log -n 4
 
       - uses: actions/setup-python@v2
         with:
