Add one more step

--- a/.github/workflows/show_report_in_comment.yml
+++ b/.github/workflows/show_report_in_comment.yml
@@ -33,6 +33,9 @@ jobs:
           git branch --contains
           git log -n 4
 
+      - uses: actions/checkout@v2
+        run: git branch --contains
+
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
